--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,7 @@
   background-color: rgb(216, 40, 37);
   padding: 10px;
   color: aliceblue;
+  filter: drop-shadow(8px 8px 8px rgba(0, 0, 0, 0.592));
 }
 
 .nav-menu {
